
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* argv0 ;
 void* atoi (char*) ;
 int beginchar ;
 int do_it () ;
 int endchar ;
 int exit (int) ;
 int getopt (int,char**,char*) ;
 char* optarg ;
 scalar_t__ optind ;
 char* path ;
 int printf (char*) ;
 char* target_host ;
 int target_port ;
 int usage () ;
 char* user ;

int main(int argc, char **argv)
{
 int ch;

 argv0 = argv[0];
 user = path = ((void*)0);
 target_port = 80;
 beginchar = 1;
 endchar = 32;

 while ((ch = getopt(argc, argv, "b:e:hp:u:")) != -1) {

  switch (ch) {
  case 'b':
   beginchar = atoi(optarg);
   break;
  case 'e':
   endchar = atoi(optarg);
   break;
  case 'p':
   path = optarg;
   break;
  case 'u':
   user = optarg;
   break;
  case 'h':
  case '?':
  default:
   usage();
  }
 }

 argc-=optind;
 argv+=optind;

 if (argc > 1)
  target_port = atoi(argv[1]);
 if (argc > 0)
  target_host = argv[0];
 else
  usage();

 if (!path) {
  printf("you must specify a path\n");
  exit(1);
 }
 if (!user) {
  printf("you must specify an user\n");
  exit(1);
 }

 do_it();

 return 0;
}
